--- a/public/assets/css/templatemo-sixteen.css
+++ b/public/assets/css/templatemo-sixteen.css
@@ -386,7 +386,7 @@ header .navbar {
 	background: linear-gradient(
         rgba(2, 2, 2, 0.8), 
         rgba(2, 2, 2, 0.8)
-      ),url(../images/products-heading.jpg);
+      ),url(../images/m11.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -398,6 +398,17 @@ header .navbar {
         rgba(2, 2, 2, 0.8), 
         rgba(2, 2, 2, 0.8)
       ),url(../images/slide_02.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+.banner-item-03 {
+	padding: 290px 0px;
+	background: linear-gradient(
+        rgba(2, 2, 2, 0.8), 
+        rgba(2, 2, 2, 0.8)
+      ),url(../images/m12.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -453,16 +464,7 @@ header .navbar {
 	font-family: "cairo";
 }
 
-.banner-item-03 {
-	padding: 290px 0px;
-	background: linear-gradient(
-        rgba(2, 2, 2, 0.8), 
-        rgba(2, 2, 2, 0.8)
-      ),url(../images/slide_01.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-}
+
 .ecwid-productBrowser.ecwid-productBrowser-CartPage,
 .ecwid-productBrowser.ecwid-productBrowser-CheckoutPaymentDetailsPage,
 .ec-wrapper {
